WIP: Added role routes, fixed logout navigation, and updated security config